change sample config file

--- a/services/adaptive-learning/client/configs/sample_config.ini
+++ b/services/adaptive-learning/client/configs/sample_config.ini
@@ -1,17 +1,11 @@
  [Teacher]
- MinScore = 0.5
- UploadUUID = 145678-154521abc-1356
- VideoFile = softbio_vid.mp4
+ UploadUUID = 2fc3cd96-6489-11eb-93db-c20e1e9a7b01
+ VideoFile = multiobject.mp4
+ Classes = coco
  ;Minimum number of instance in each frame to store the frame
- MinDetectionPerFrame = 0
- ;frequency of saving frames
- SaveFrequency = 1
  PostProcessing = " "
  ImageFeature = " "
 
  [Student]
- BatchSize = 16
- Epochs = 100
- ValidationSplit = .17
- QuantizationAware = false
+ QuantizedModel = false
 
