--- a/services/adaptive-learning/client/configs/sample_config.json
+++ b/services/adaptive-learning/client/configs/sample_config.json
@@ -3,9 +3,7 @@
   {
     "UploadUUID": "2fc3cd96-6489-11eb-93db-c20e1e9a7b01",
     "VideoFile": "multiobject.mp4",
-    "Classes": "coco",
-    "PostProcessing": " ",
-    "ImageFeature": " "
+    "Classes": "coco"
   },
   "Student":
   {
